test-services/dashboard-service/deploy/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dashboard-service
  labels:
    name: dashboard-service
