test-services/dashboard-service/deploy/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard-service
  namespace: dashboard-service
  labels:
    app: dashboard-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashboard-service
  template:
    metadata:
      labels:
        app: dashboard-service
        version: v0.0.0
    spec:
      containers:
        - name: dashboard-service
          image: dashboard-service:0.0.0
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
              name: dashboard
